Update Player Prediction Modelling.ipynb

--- a/Predict_Modelling.ipynb
+++ b/Predict_Modelling.ipynb
@@ -6,7 +6,7 @@
    "id": "e777fc84",
    "metadata": {},
    "source": [
-    "## Data Modelling for Team and Player Performance"
+    "## Data Modelling for Player Ranking"
    ]
   },
   {
